--- a/src/app/formulario/formulario.page.html
+++ b/src/app/formulario/formulario.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>Formulario</ion-title>
+    <ion-title>Formulario-cuenta</ion-title>
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/home"></ion-back-button>
     </ion-buttons>
@@ -13,10 +13,29 @@
       <ion-label position="floating" color="primary">DNI</ion-label>
       <ion-input type="text" formControlName="dni"></ion-input>
     </ion-item>
+    <div class="validation-errors">
+      <ng-container *ngFor="let validation of validation_messages.dni">
+        <div class="error-message" *ngIf="validations_form.get('dni').hasError(validation.type)
+      && (validations_form.get('dni').dirty
+      || validations_form.get('dni').touched)">
+          <ion-icon name="information-circle-outline"></ion-icon> {{ validation.message }}
+        </div>
+      </ng-container>
+    </div>
     <ion-item>
       <ion-label position="floating" color="primary">IBAN</ion-label>
       <ion-input type="text" formControlName="iban"></ion-input>
     </ion-item>
+    <div class="validation-errors">
+      <ng-container *ngFor="let validation of validation_messages.iban">
+        <div class="error-message" *ngIf="validations_form.get('iban').hasError(validation.type)
+      && (validations_form.get('iban').dirty
+      || validations_form.get('iban').touched)">
+          <ion-icon name="information-circle-outline"></ion-icon> {{ validation.message }}
+        </div>
+      </ng-container>
+    </div>
+
     <ion-button color="primary" class="submit-btn" expand="block" type="submit" [disabled]="!validations_form.valid">
       Aceptar</ion-button>
   </form>
